simpleweb/securitygroup.tf
resource "aws_security_group" "simpleweb_sg" {
  vpc_id      = aws_vpc.tf_vpc.id
  name        = "allow_ssh_http"
  description = "security group for ssh and http"
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "simpleweb"
  }
}
